[package]
name = "quest-rue"
version = "1.0.0"
description = "Runtime Unity Editing, for Quest Il2Cpp using the Scotland2 modloader"
authors = ["Metalit"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
